--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Demystify Salesforce
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+# email: your-email@example.com
+# description: >- # this means to ignore newlines until "baseurl:"
+  # Write an awesome description for your new site here. You can edit this
+  # line in _config.yml. It will appear in your document head meta (for
+  # Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
-
+# twitter_username: jekyllrb
+# github_username: jekyll
+linkedin_username: selim-hamidou
 # Build settings
 theme: minima
 plugins:
