--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,17 @@
 
 title: Demystify Salesforce
 # email: your-email@example.com
-# description: >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
+  Salesforce developer
+  Passionate about building new things on the platform
+  Let's build things together!
   # Write an awesome description for your new site here. You can edit this
   # line in _config.yml. It will appear in your document head meta (for
   # Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-# github_username: jekyll
+github_username: selimhamidou
 linkedin_username: selim-hamidou
 # Build settings
 theme: minima
