--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@
 
 title: Demystify Salesforce
 # email: your-email@example.com
+
+permalink: /posts/:title
+
 description: >- # this means to ignore newlines until "baseurl:"
   Salesforce developer - 
   Passionate about building new things on the platform -
