--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Demystify Salesforce
 # email: your-email@example.com
 
 permalink: /posts/:title
-
+name: Demystify Salesforce
 description: >- # this means to ignore newlines until "baseurl:"
   Salesforce developer - 
   Passionate about building new things on the platform -
