--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Demystify Salesforce
+title: null
 # email: your-email@example.com
 
 permalink: /posts/:title
-name: null
+name: Demystify Salesforce
 description: >- # this means to ignore newlines until "baseurl:"
   Salesforce developer - 
   Passionate about building new things on the platform -
