--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Demystify Salesforce
+title: Sélim HAMIDOU
 # email: your-email@example.com
 
 permalink: /posts/:title
